@@ -3,6 +3,7 @@ package uk.gov.hmcts.ethos.replacement.docmosis.service;
 import com.google.common.base.Strings;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.ecm.common.client.CcdClient;
@@ -16,7 +17,6 @@ import uk.gov.hmcts.ecm.common.model.ccd.items.EccCounterClaimTypeItem;
 import uk.gov.hmcts.ecm.common.model.ccd.items.HearingTypeItem;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -30,23 +30,37 @@ import static uk.gov.hmcts.ecm.common.model.helper.Constants.SINGLE_CASE_TYPE;
 @Service("caseTransferService")
 public class CaseTransferService {
 
+    static final String BF_ACTIONS_ERROR_MSG = "There are one or more open Brought Forward actions that must be "
+            + "cleared before the case %s can be transferred";
+
+    static final String HEARINGS_ERROR_MSG = "There are one or more hearings that have the status Listed. "
+            + "These must be updated before the case %s can be transferred";
+
     private final PersistentQHelperService persistentQHelperService;
     private final CcdClient ccdClient;
-    private String caseTypeId;
-    private String jurisdiction;
-    private String officeCT;
-    private String positionTypeCT;
-    private String reasonForCT;
 
     @Value("${ccd_gateway_base_url}")
     private String ccdGatewayBaseUrl;
+
+    public List<String> createCaseTransfer(CaseDetails caseDetails, String userToken) {
+        var errors = new ArrayList<String>();
+        var caseDataList = getAllCasesToBeTransferred(caseDetails, userToken);
+
+        caseDataList.forEach(caseData -> validateCase(caseData, errors));
+
+        if (!errors.isEmpty()) {
+            return errors;
+        }
+
+        return transferCases(caseDetails, caseDataList, userToken);
+    }
 
     private CaseData getOriginalCase(CaseDetails caseDetails, String userToken) {
         try {
             var caseData = caseDetails.getCaseData();
             if (!Strings.isNullOrEmpty(caseData.getCounterClaim())) {
-                List<SubmitEvent> submitEvents =  ccdClient.retrieveCasesElasticSearch(userToken,
-                        caseDetails.getCaseTypeId(), Arrays.asList(caseData.getCounterClaim()));
+                List<SubmitEvent> submitEvents = ccdClient.retrieveCasesElasticSearch(userToken,
+                        caseDetails.getCaseTypeId(), List.of(caseData.getCounterClaim()));
                 return submitEvents.get(0).getCaseData();
             } else {
                 return caseDetails.getCaseData();
@@ -62,14 +76,13 @@ public class CaseTransferService {
         try {
             var originalCaseData = getOriginalCase(caseDetails, userToken);
             List<CaseData> cases = new ArrayList<>();
-            String counterClaim;
             cases.add(originalCaseData);
-            if (originalCaseData.getEccCases() != null && !originalCaseData.getEccCases().isEmpty()) {
 
-                for (EccCounterClaimTypeItem counterClaimItem:originalCaseData.getEccCases()) {
-                    counterClaim =  counterClaimItem.getValue().getCounterClaim();
-                    List<SubmitEvent>   submitEvents = ccdClient.retrieveCasesElasticSearch(userToken,
-                            caseDetails.getCaseTypeId(), new ArrayList<>(Collections.singleton(counterClaim)));
+            if (CollectionUtils.isNotEmpty(originalCaseData.getEccCases())) {
+                for (EccCounterClaimTypeItem counterClaimItem : originalCaseData.getEccCases()) {
+                    var counterClaim = counterClaimItem.getValue().getCounterClaim();
+                    var submitEvents = ccdClient.retrieveCasesElasticSearch(userToken, caseDetails.getCaseTypeId(),
+                            new ArrayList<>(Collections.singleton(counterClaim)));
                     if (submitEvents != null && !submitEvents.isEmpty()) {
                         cases.add(submitEvents.get(0).getCaseData());
                     }
@@ -81,64 +94,6 @@ public class CaseTransferService {
             throw new CaseCreationException("Error getting all cases to be transferred for case number: "
                     + caseDetails.getCaseData().getEthosCaseReference() + " " + ex.getMessage());
         }
-    }
-
-    public void createCaseTransferEvent(CaseData caseData, List<String> errors, String userToken) {
-
-        persistentQHelperService.sendCreationEventToSingles(
-                userToken,
-                caseTypeId,
-                jurisdiction,
-                errors,
-                new ArrayList<>(Collections.singletonList(caseData.getEthosCaseReference())),
-                officeCT,
-                positionTypeCT,
-                ccdGatewayBaseUrl,
-                reasonForCT,
-                SINGLE_CASE_TYPE,
-                NO,
-                null
-        );
-        caseData.setLinkedCaseCT("Transferred to " + officeCT);
-        caseData.setPositionType(positionTypeCT);
-        log.info("Clearing the CT payload for case: " + caseData.getEthosCaseReference());
-        caseData.setOfficeCT(null);
-        caseData.setPositionTypeCT(null);
-        caseData.setStateAPI(null);
-    }
-
-    public void createCaseTransfer(CaseDetails caseDetails, List<String> errors, String userToken) {
-
-        caseTypeId = caseDetails.getCaseTypeId();
-        officeCT = caseDetails.getCaseData().getOfficeCT().getValue().getCode();
-        positionTypeCT = caseDetails.getCaseData().getPositionTypeCT();
-        reasonForCT = caseDetails.getCaseData().getReasonForCT();
-        jurisdiction = caseDetails.getJurisdiction();
-        List<CaseData> caseDataList = getAllCasesToBeTransferred(caseDetails, userToken);
-        for (CaseData caseData : caseDataList) {
-
-            if (!checkBfActionsCleared(caseData)) {
-                errors.add(
-                        "There are one or more open Brought Forward actions that must be cleared before the case "
-                                + caseData.getEthosCaseReference() + " can "
-                                + "be transferred");
-            }
-
-            if (!checkHearingsNotListed(caseData)) {
-                errors.add(
-                    "There are one or more hearings that have the status Listed. These must be updated before the case "
-                        + caseData.getEthosCaseReference() + " can be transferred");
-            }
-        }
-
-        if (!errors.isEmpty()) {
-            return;
-        }
-
-        for (CaseData caseData : caseDataList) {
-            createCaseTransferEvent(caseData, errors, userToken);
-        }
-
     }
 
     private boolean checkBfActionsCleared(CaseData caseData) {
@@ -166,8 +121,51 @@ public class CaseTransferService {
                 }
             }
         }
+
         return true;
     }
 
-}
+    private void validateCase(CaseData caseData, List<String> errors) {
+        if (!checkBfActionsCleared(caseData)) {
+            errors.add(String.format(BF_ACTIONS_ERROR_MSG, caseData.getEthosCaseReference()));
+        }
 
+        if (!checkHearingsNotListed(caseData)) {
+            errors.add(String.format(HEARINGS_ERROR_MSG, caseData.getEthosCaseReference()));
+        }
+    }
+
+    private List<String> transferCases(CaseDetails caseDetails, List<CaseData> caseDataList, String userToken) {
+        var errors = new ArrayList<String>();
+        for (CaseData caseData : caseDataList) {
+            createCaseTransferEvent(caseDetails, caseData, userToken, errors);
+        }
+
+        return errors;
+    }
+
+    private void createCaseTransferEvent(CaseDetails caseDetails, CaseData caseData, String userToken,
+                                         List<String> errors) {
+        persistentQHelperService.sendCreationEventToSingles(
+                userToken,
+                caseDetails.getCaseTypeId(),
+                caseDetails.getJurisdiction(),
+                errors,
+                List.of(caseData.getEthosCaseReference()),
+                caseDetails.getCaseData().getOfficeCT().getValue().getCode(),
+                caseDetails.getCaseData().getPositionTypeCT(),
+                ccdGatewayBaseUrl,
+                caseDetails.getCaseData().getReasonForCT(),
+                SINGLE_CASE_TYPE,
+                NO,
+                null
+        );
+
+        caseData.setLinkedCaseCT("Transferred to " + caseDetails.getCaseData().getOfficeCT().getValue().getCode());
+        caseData.setPositionType(caseDetails.getCaseData().getPositionTypeCT());
+        log.info("Clearing the CT payload for case: " + caseData.getEthosCaseReference());
+        caseData.setOfficeCT(null);
+        caseData.setPositionTypeCT(null);
+        caseData.setStateAPI(null);
+    }
+}
