@@ -23,13 +23,19 @@ import uk.gov.hmcts.ethos.replacement.docmosis.helpers.BFHelperTest;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.MultipleUtil;
 
 import java.io.IOException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.UUID;
 
 import static org.junit.Assert.assertEquals;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.when;
-import static uk.gov.hmcts.ecm.common.model.helper.Constants.*;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.ACCEPTED_STATE;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.HEARING_STATUS_HEARD;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.HEARING_STATUS_LISTED;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.LEEDS_CASE_TYPE_ID;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.MULTIPLE;
 
 @RunWith(SpringJUnit4ClassRunner.class)
 public class CaseTransferServiceTest {
@@ -70,15 +76,16 @@ public class CaseTransferServiceTest {
 
     @Test
     public void createCaseTransfer() {
-        List<String> errors = new ArrayList<>();
-        caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), errors, authToken);
+        var errors = caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), authToken);
+
+        assertTrue(errors.isEmpty());
         assertEquals("PositionTypeCT", ccdRequest.getCaseDetails().getCaseData().getPositionType());
-        assertEquals("Transferred to " + LEEDS_CASE_TYPE_ID, ccdRequest.getCaseDetails().getCaseData().getLinkedCaseCT());
+        assertEquals("Transferred to " + LEEDS_CASE_TYPE_ID,
+                ccdRequest.getCaseDetails().getCaseData().getLinkedCaseCT());
     }
 
     @Test
     public void createCaseTransferECC() throws IOException {
-        List<String> errors = new ArrayList<>();
         CaseData caseData = MultipleUtil.getCaseData("3434232323");
         caseData.setCaseRefNumberCount("2");
         DynamicFixedListType officeCT = new DynamicFixedListType();
@@ -97,12 +104,17 @@ public class CaseTransferServiceTest {
         type.setCounterClaim("2123456/2020");
         item.setId(UUID.randomUUID().toString());
         item.setValue(type);
-        caseData.setEccCases(Arrays.asList(item));
+        caseData.setEccCases(List.of(item));
         submitEvent1.setCaseData(caseData);
-        when(ccdClient.retrieveCasesElasticSearch(authToken,ccdRequest.getCaseDetails().getCaseTypeId(), Arrays.asList("3434232323"))).thenReturn(submitEventList1);
-        when(ccdClient.retrieveCasesElasticSearch(authToken,ccdRequest.getCaseDetails().getCaseTypeId(), Arrays.asList("2123456/2020"))).thenReturn(submitEventList);
+        when(ccdClient.retrieveCasesElasticSearch(authToken,ccdRequest.getCaseDetails().getCaseTypeId(),
+                List.of("3434232323"))).thenReturn(submitEventList1);
+        when(ccdClient.retrieveCasesElasticSearch(authToken,ccdRequest.getCaseDetails().getCaseTypeId(),
+                List.of("2123456/2020"))).thenReturn(submitEventList);
         when(ccdClient.startEventForCase(authToken, "Manchester", "Employment", "12345")).thenReturn(ccdRequest);
-        caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), errors, authToken);
+
+        var errors = caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), authToken);
+
+        assertTrue(errors.isEmpty());
         assertEquals("PositionTypeCT", submitEvent.getCaseData().getPositionType());
         assertEquals("Transferred to " + LEEDS_CASE_TYPE_ID, submitEvent.getCaseData().getLinkedCaseCT());
         assertEquals("PositionTypeCT", submitEvent1.getCaseData().getPositionType());
@@ -111,32 +123,38 @@ public class CaseTransferServiceTest {
 
     @Test
     public void createCaseTransferMultiples() {
-        List<String> errors = new ArrayList<>();
         ccdRequest.getCaseDetails().getCaseData().setStateAPI(MULTIPLE);
-        caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), errors, authToken);
+
+        var errors = caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), authToken);
+
+        assertTrue(errors.isEmpty());
         assertEquals("PositionTypeCT", ccdRequest.getCaseDetails().getCaseData().getPositionType());
-        assertEquals("Transferred to " + LEEDS_CASE_TYPE_ID, ccdRequest.getCaseDetails().getCaseData().getLinkedCaseCT());
+        assertEquals("Transferred to " + LEEDS_CASE_TYPE_ID,
+                ccdRequest.getCaseDetails().getCaseData().getLinkedCaseCT());
     }
 
     @Test
     public void createCaseTransferBfNotCleared() {
         ccdRequest.getCaseDetails().getCaseData().setBfActions(BFHelperTest.generateBFActionTypeItems());
         ccdRequest.getCaseDetails().getCaseData().getBfActions().get(0).getValue().setCleared(null);
-        List<String> errors = new ArrayList<>();
-        caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), errors, authToken);
-        assertEquals(1, errors.size());
-        assertEquals("There are one or more open Brought Forward actions that must be cleared before the "
-                + "case " + ccdRequest.getCaseDetails().getCaseData().getEthosCaseReference() + " can be transferred", errors.get(0));
+
+        var errors = caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), authToken);
+
+        var expectedBfActionsError = String.format(CaseTransferService.BF_ACTIONS_ERROR_MSG,
+                ccdRequest.getCaseDetails().getCaseData().getEthosCaseReference());
+        assertEquals(expectedBfActionsError, errors.get(0));
     }
 
     @Test
     public void createCaseTransferHearingListed() {
         ccdRequest.getCaseDetails().getCaseData().setHearingCollection(getHearingTypeCollection(HEARING_STATUS_LISTED));
-        List<String> errors = new ArrayList<>();
-        caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), errors, authToken);
+
+        var errors = caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), authToken);
+
         assertEquals(1, errors.size());
-        assertEquals("There are one or more hearings that have the status Listed. These must be updated "
-                + "before the case " + ccdRequest.getCaseDetails().getCaseData().getEthosCaseReference() + " can be transferred", errors.get(0));
+        var expectedHearingsError = String.format(CaseTransferService.HEARINGS_ERROR_MSG,
+                ccdRequest.getCaseDetails().getCaseData().getEthosCaseReference());
+        assertEquals(expectedHearingsError, errors.get(0));
     }
 
     @Test
@@ -144,21 +162,25 @@ public class CaseTransferServiceTest {
         ccdRequest.getCaseDetails().getCaseData().setBfActions(BFHelperTest.generateBFActionTypeItems());
         ccdRequest.getCaseDetails().getCaseData().getBfActions().get(0).getValue().setCleared(null);
         ccdRequest.getCaseDetails().getCaseData().setHearingCollection(getHearingTypeCollection(HEARING_STATUS_LISTED));
-        List<String> errors = new ArrayList<>();
-        caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), errors, authToken);
+
+        var errors = caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), authToken);
+
         assertEquals(2, errors.size());
-        assertEquals("There are one or more open Brought Forward actions that must be cleared before the "
-                + "case " +  ccdRequest.getCaseDetails().getCaseData().getEthosCaseReference() + " can be transferred", errors.get(0));
-        assertEquals("There are one or more hearings that have the status Listed. These must be updated "
-                + "before the case " + ccdRequest.getCaseDetails().getCaseData().getEthosCaseReference() + " can be transferred", errors.get(1));
+        var expectedBfActionsError = String.format(CaseTransferService.BF_ACTIONS_ERROR_MSG,
+                ccdRequest.getCaseDetails().getCaseData().getEthosCaseReference());
+        assertEquals(expectedBfActionsError, errors.get(0));
+        var expectedHearingsError = String.format(CaseTransferService.HEARINGS_ERROR_MSG,
+                ccdRequest.getCaseDetails().getCaseData().getEthosCaseReference());
+        assertEquals(expectedHearingsError, errors.get(1));
     }
 
     @Test
     public void createCaseTransferBfClearedAndNotHearingListed() {
         ccdRequest.getCaseDetails().getCaseData().setBfActions(BFHelperTest.generateBFActionTypeItems());
         ccdRequest.getCaseDetails().getCaseData().setHearingCollection(getHearingTypeCollection(HEARING_STATUS_HEARD));
-        List<String> errors = new ArrayList<>();
-        caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), errors, authToken);
+
+        var errors = caseTransferService.createCaseTransfer(ccdRequest.getCaseDetails(), authToken);
+
         assertEquals(0, errors.size());
     }
 
